$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-3 (opened October 4, 2011)

	* permutest.cca: First attempt of setting 'parallel' processing in
	permutest.cca. Currently the parallelization only works in R
	2.14.0 (alpha) and later with the 'parallel' package, and in
	unix-like operating systems (Linux and MacOS X were
	tested). Function permutest.cca gets a new argument 'parallel'
	(defaults 1) that gives the number of desired parallel
	processes. The argument is silently ignored if the system is not
	capable of parallel processing (missing 'parallel' package,
	Windows). The argument may be bassed to permutest.cca() from
	anova.cca(), but currently setting the random number generator
	seed will fail, and the results probably will be wrong. This
	feature is only for testing. The functionality cannot be included
	cleanly: it depends on the package 'parallel', but suggesting
	'parallel' fails R CMD check in the current R release (2.13.2)
	which does not yet have 'parallel'. So we get warnings:
	'library' or 'require' call not declared from: parallel, and
	permutest.cca: no visible global function definition for
	‘mclapply’.
	Perhaps we delay adding this feature, and cancel this submission
	later. However, with these warnings, the function passes tests in
	R 2.13.2. (It fails in R 2.14.0 alpha since it suggests 'rgl', and
	that package fails in R 2.14.0.)

Version 2.1-2 (opened October 4, 2011)

	* permutest.cca could not be update()d, because "permutest.cca"
	was not exported from NAMESPACE -- only "permutest" was
	exported. Another buglet (and this calls for checking other 'call'
	items that return non-exported calls).

	* metaMDS did not reset 'tries' when the analysis was started from
	'previous.best' of a different model (except when no. of dims 'k'
	changed). I think this was a bug(let). Fixed in metaMDSiter.R.
	
	* commsimulator is going to be deprecated: it is no longer used in